snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.jar.sha1
038f149a99cdeb43f281241d050f1ad5bf20e51d